# pytest-sandbox

./: README.md  pyproject.toml
tests/: test_fixture.py  test_parametrized.py  test_simple.py
